Add queue benchmark, jemalloc and couple of fixes

--- a/meson.build
+++ b/meson.build
@@ -8,10 +8,22 @@ thread_dep = dependency('threads')
 libuv_dep = dependency('libuv')
 urcu_dep = dependency('liburcu-memb')
 urcu_cds_dep = dependency('liburcu-cds')
+jemalloc_dep = dependency('jemalloc')
 
-executable('bench', ['list-bench.c'],
+executable('list-bench', ['list-bench.c'],
            dependencies : [
              thread_dep,
+             jemalloc_dep,
+             libuv_dep,
+             urcu_dep,
+             urcu_cds_dep,
+           ],
+          )
+
+executable('queue-bench', ['queue-bench.c'],
+           dependencies : [
+             thread_dep,
+             jemalloc_dep,
              libuv_dep,
              urcu_dep,
              urcu_cds_dep,
